--- a/style.css
+++ b/style.css
@@ -6,13 +6,28 @@
     font-family: 'Poppins', sans-serif;
 }
 
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    background: url('images/background.jpg') no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+
+
+
+
+
+
+
 header {
     position: fixed;
     top: 0;
     left: 0;
     width:100%;
     padding: 20px 100px;
-    background-color: red;
     display: flex;
     justify-content: space-between;
 }
@@ -32,6 +47,33 @@ header {
     font-weight: 500;
     margin-left: 40px;
 }
+
+.navigation a::after{
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: -6px;
+    width: 100%;
+    height: 3px;
+    background: #fff;
+    border-radius: 5px;
+    transform-origin: right;
+    transform: scaleX(0);
+    transition: transform .5s;
+}
+.navigation a:hover::after {
+    transform-origin: left;
+    transform: scaleX(1);
+}
+
+
+
+
+
+
+
+
+
 .navigation .btnLogin-popup {
     width: 130px;
     height: 50px;
@@ -43,10 +85,12 @@ header {
     color: #fff;
     font-weight: 500;
     margin-left: 40px;
+    transition: .5s;
     
 }
 
 .navigation .btnLogin-popup:hover {
     background: #fff;
     color: #162928;
+
 }
