--- a/style.css
+++ b/style.css
@@ -101,7 +101,13 @@ header {
     display: flex;
     align-items: center;
     overflow: hidden;
-    transition: height .2s ease;
+    transform: scale(0);
+    transition: .5s ease,height .2s ease;
+}
+
+.wrapper.active-popup {
+    transform: scale(1);
+
 }
 
 .wrapper.active {
